--- a/Sources/Whiff.xcodeproj/xcshareddata/xcschemes/Whiff.xcscheme
+++ b/Sources/Whiff.xcodeproj/xcshareddata/xcschemes/Whiff.xcscheme
@@ -28,6 +28,30 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES"
+            testExecutionOrdering = "random">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "TootSnifferTests"
+               BuildableName = "TootSnifferTests"
+               BlueprintName = "TootSnifferTests"
+               ReferencedContainer = "container:Packages">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES"
+            testExecutionOrdering = "random">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "WhiffFeaturesTests"
+               BuildableName = "WhiffFeaturesTests"
+               BlueprintName = "WhiffFeaturesTests"
+               ReferencedContainer = "container:Packages">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
